# HW03_airbnb-ml-serving

./: .dockerignore  .env.example  .gitignore  01_model_serving_student.ipynb  Dockerfile  Dockerfile.naive  README.md  docker-compose.yml  log_model.py  mlflow.db  pyproject.toml  requirements.txt
k8s/: deployment.yaml  service.yaml
mlruns/1/models/m-dfb803ba756347abb649a67b04d7c3e7/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
reports/: docker_size_report.md
src/airbnb_serving/: app.py  mlflow.db  predictor.py  schema.py
src/airbnb_serving.egg-info/: PKG-INFO  requires.txt
