[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airbnb-serving"
version = "0.1.0"
description = "Airbnb ML model serving with FastAPI and MLflow"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "mlflow>=2.13",
    "scikit-learn>=1.6.1",
    "pandas>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]